# omb

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/reuse_steps/build_omb/: action.yml
.github/reuse_steps/print_c/: action.yml
.github/reuse_steps/print_compiler/: action.yml
.github/reuse_steps/print_cxx/: action.yml
.github/reuse_steps/print_fortran/: action.yml
.github/reuse_steps/print_host/: action.yml
.github/workflows/: build.yml
check_compiler/: CMakeLists.txt  check_triad_kernels.fypp
cmake/: Config.cmake.in  ombChecks.cmake  ombDefaultFlags.cmake  ombFyppify.cmake  ombInfo.cmake  ombMPIOptions.cmake  ombOpenMPOptions.cmake  ombOptions.cmake
driver/: CMakeLists.txt  omb-analyzer.py  omb-driver.sh
src/: CMakeLists.txt  benchmarks.fypp  benchmarks_add.fypp  benchmarks_axpy.fypp  benchmarks_copy.fypp  benchmarks_false_sharing_pentadd.fypp  benchmarks_false_sharing_tetradd.fypp  benchmarks_false_sharing_triadd.fypp  benchmarks_fill.fypp  benchmarks_helpers.fypp  benchmarks_macros.fypp  benchmarks_pentadd.fypp  benchmarks_read.fypp  benchmarks_scale.fypp  benchmarks_sum.fypp  benchmarks_tetradd.fypp  benchmarks_triadd.fypp  common.fypp  dummies.fypp  info_omp.fypp  omb.fypp  options.fypp  results.fypp  timing.f90  timing.fypp
src/driver/: CMakeLists.txt  omb-driver.sh
